# transit-analysis

./: .gitignore  pyproject.toml
data/dot.gov/: Roanoke Monthly Ridership.xlsx
data/roanoke/: Alighting-May24-Apr25.csv  Boarding-May24-Apr25.csv  Low_Income_Cleaned.xlsx
notebooks/: roanoke-ridership.ipynb
scripts/: sync.sh
scripts/roanoke/: low_income.ipynb  ridership.ipynb  scrape_bus_data.py
transit/: vmgo.py
